--- a/css/index.css
+++ b/css/index.css
@@ -5,39 +5,6 @@
     transition: transform 0.3s ease;
 }
 
-.titulo{
-    font-size: xx-large;
-    color: var(--color-2);
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: var(--color-1);
-}
 
-.titulo2{
-    font-size: 1.2rem;
-    -webkit-text-stroke-width: 1px;
-    color: transparent;
-    -webkit-text-stroke-color: var(--color-1);
-}
 
-.placa-amarela{
-    width: 25%;
-}
-
-.nav{
-    background-image: url(../images/fita-listrada.png);
-    background-size: cover;
-    background-blend-mode:color-burn;
-}
-
-ul{
-    padding: 0px 25px;
-    list-style-type: circle;
-    list-style-position: outside;
-
-    text-align: left;
-    font-size: small;
-}
-
-ul > li{
-    margin: 5px 0px;
-}
+/*Caesar Dressing // Fuggles // Kranky // Yuji+Boku*/
