--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
   --color-2: rgb(232, 249, 212);
   --color-3: #b7bc90;
   --color-4: #3b3712;
+  --color-5: #b8bdb1;
+  --color-6: #656769;
+  --color-7: #f5c27f;
+  --color-8: #aff2f5;
 }
 
 body {
