--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,9 @@
     transition: transform 0.3s ease;
 }
 
+.paragrafo{
+    text-align: justify
+}
 
 
 /*Caesar Dressing // Fuggles // Kranky // Yuji+Boku*/
